--- a/GilsonHenrique/Uso_While.html
+++ b/GilsonHenrique/Uso_While.html
@@ -17,10 +17,10 @@
         alert("Exemplo de uso do while")
 
         let numero = parseInt(prompt("Digite um número")) 
-        if (numero > 50){
+        if (numero >= 50){
             alert("Resultado: " + numero * 10)
         }
-            if (numero < 50){
+            if (numero <= 50){
                 while(numero < 1000){
                     numero = numero * 2
                 }
