--- a/maristelaPelow/index.html
+++ b/maristelaPelow/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="estilo.css">
+    <link rel="shortcut icon" href="img/tag_faces.png" type="image/x-icon">
     <title>Document</title>
 </head>
 <body>
+    <header>
+        
+    </header>
+    <main> 
+        <section class="container">
+            <form>
+                <label >Digite seu nome:</label>
+                <input type="text" >
+
+                <label for="">Digite sua idade:</label>
+                <input type="text">
+
+                <label for="">Digite o nome de uma celebridade:</label>
+                <input type="text">
+            </form>
+        </section>
+    </main>
     
 </body>
 </html>
