--- a/Roberto Becker/index.html
+++ b/Roberto Becker/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+  <script>
+ let nome = ""
+ while(nome.length <3){
+   nome = prompt("qual seu nome?")
+    }
+ alert("bem vindo " + nome)
+  </script>  
 </body>
 </html>
