--- a/solangeCunha/index.html
+++ b/solangeCunha/index.html
@@ -1,4 +1,4 @@
-/*Criar um software que leia o nome a idade e informe, em 2010 quantos anos ela tinha e em 2050 qauntos anos ela terá. Por fim multiplique a idade por 3 e informe quanto falta para esse número seja 1000*/
+
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -21,12 +21,12 @@
 
        idadeFuturo = idade + 28
 
-        alert(`Me chamo ${nome} e tenho ${idade} anos, em 2010 tinha ${idadePassado} e em 2050 terei ${idadeFuturo}`)
+        alert(`Me chamo ${nome} e tenho ${idade} anos, em 2010 tinha ${idadePassado} e em 2050 terei ${idadeFuturo} anos.`)
 
 
         idadeDiferencaMil = 1000 - (idade * 3) 
 
-alert(` Mil menos a minha idade triplicada é $`)
+alert(` Mil menos a minha idade triplicada é ${idadeDiferencaMil} anos.`)
 
 
     </script>
