--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <script>
-let nome = ""
-while(nome.length <3){
-    nome = prompt("qual seu nome?")
-}
-alert("bem vindo " + nome)
+        const nome = prompt("Qual é seu nome?")
+        const idade = prompt("Qual a sua idade?")
+       
+        const idadenumerica = parseInt(idade)
+        alert("idade em 2010 : " + idadenumerica -12 )
+        alert("Idade em 2050 : " + idadenumerica +50)
+        alert("Idade em 2050 : " + idadenumerica *3)
+    </script>    
 
-</script>
 </body>
 </html>
